[package]
name = "beam_search"
version = "0.1.0"
authors = ["Arka Nayan <itsarkanayan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "beam_search"
#crate-type = ["cdylib"]
crate-type = ["lib", "cdylib"]

[dependencies]
numpy = "0.8.0"

[dependencies.ndarray]
version = "0.13.0"
features = ["rayon", "blas"]

[dependencies.pyo3]
version = "0.9.2"
features = ["extension-module"]

[dev-dependencies]
ndarray-npy = "0.5"

[profile.release]
lto=true